@@ -1,6 +1,7 @@
 0.6.2
 - Bugfixes:
   - Windows: Saving session on different drive than data causes ValueError.
+  - Memory leak: re-plotting scatter plots (`ControlPanel.OnChangeFilter`)
 0.6.1
 - Load session: Allow user to select missing data files (#80)
 - Sessions: Store relative paths in index file for user convenience (#80)
